--- a/fifteen/covers/covers.css
+++ b/fifteen/covers/covers.css
@@ -1,4 +1,39 @@
-/*
+nav {
+	width: 100px;
+	position:fixed;
+	left: 12px;
+	top: 12px;
+
+}
+
+.nav-container {
+
+
+
+}
+
+.next {
+
+}
+
+select {
+
+   border: 1px solid #ccc;
+   font-size: 16px;
+   height: 50px;
+   width: 60px;
+   font-family: monospace;
+   -webkit-transition:width 3s;
+}
+
+select:hover {
+	width: 250px;
+
+	}
+
+option {
+	font-family: monospace;
+}/*
 body.two {
 
 
