--- a/knox/night.css
+++ b/knox/night.css
@@ -8,15 +8,27 @@ body {
 
 }
 
-#info {
+#menu {
 	position: fixed;
 	bottom: 20px;
 	left: 20px;
 }
 
+#menu a {
+	font-size: 10pt;
+	background: black;
+	color: white;
+	padding: 3pt;
+	display: inline-block;
+}
+
 h3 {
-	font-family: 'Source Code Pro', san-serif;
+	font-family: 'Source Code Pro', sans-serif;
 	color: #5A4C50;
+}
+
+a, .quotes {
+	font-family: 'Source Code Pro', sans-serif;
 }
 
 h3:hover {
@@ -24,9 +36,30 @@ h3:hover {
 }
 
 #box {
-	width: 100%;
+	width: 750px;
+	position: fixed;
+	left: 20%;
+	top: 100px;
+	margin: 0 auto;
 
 }
+
+svg:hover, #logo:hover {
+	cursor: move;
+}
+
+.quotes {
+	width: 350px;
+	position: fixed;
+	left: 35%;
+	top: 150px;
+	z-index: 10;
+	color: #9D9D9D;
+	font-size: 10pt;
+
+}
+
+
 #logo {
 	width: 250px;
 	position: fixed;
@@ -55,6 +88,34 @@ cursor: url('lasso.ico'), default;
 }
 
 
+
+.quotes {
+  color: hsl(204, 70%, 23%);
+  
+  -webkit-animation-name: glow-text;
+  -webkit-animation-duration: 1s;
+  -webkit-animation-iteration-count: infinite;
+  -webkit-animation-timing-function: ease-in-out;
+  -webkit-animation-direction: alternate;
+  
+  animation-name: glow-text;
+  animation-duration: 1s;
+  animation-iteration-count: infinite;
+  animation-timing-function: ease-in-out;
+  animation-direction: alternate;
+  
+  -moz-animation: none;
+}
+
+@-webkit-keyframes glow-text {
+  0% { color: hsl(204, 80%, 23%); }
+  100% { color: white; }
+}
+
+@keyframes glow-text {
+  0% { color: hsl(204, 80%, 23%); }
+  100% { color: white; }
+}
 
 .eyes { fill: hsl(145, 63%, 22%); }
 
