--- a/knox/style.css
+++ b/knox/style.css
@@ -1,5 +1,5 @@
 body {
-	background: url(paper.png) repeat;
+	
 }
 
 .container {
@@ -8,13 +8,28 @@ body {
 
 }
 
-#info {
+#menu {
 	position: fixed;
 	bottom: 20px;
 	left: 20px;
 }
 
-h3 {
+#menu a {
+	font-size: 10pt;
+	background: black;
+	color: white;
+	padding: 3pt;
+	display: inline-block;
+}
+
+#info {
+	position:fixed;
+	left:20%;
+	top: 60px;
+	z-index: -10;
+}
+
+a {
 	font-family: 'Source Code Pro', san-serif;
 }
 
@@ -38,10 +53,13 @@ h3:hover {
 	position: fixed;
 	top: 20px;
 	right:40px;
+	z-index: -1;
 }
 
+
+
 #sun:hover {
-cursor: url('lasso.ico'), default;
+cursor: move;
 }
 
 
@@ -52,6 +70,48 @@ cursor: url('lasso.ico'), default;
 #cover:hover {
 	transform: translateY(100px);
 }
+
+
+
+.eyes {
+  -webkit-animation-name: up;
+  -webkit-animation-duration: 1s;
+  -webkit-animation-iteration-count: infinite;
+  -webkit-animation-timing-function: ease-in-out;
+  -webkit-animation-direction: alternate;
+  
+  animation-name: up;
+  animation-duration: 1s;
+  animation-iteration-count: infinite;
+  animation-timing-function: ease-in-out;
+  animation-direction: alternate;
+  
+  -moz-animation: none;
+}
+
+@-webkit-keyframes up {
+  20% { transform: translateY(1px); }
+  25% { transform: translateY(0px); }
+  40% { transform: translateY(-2px); }
+  60% { transform: translateY(0px); }
+  80% { transform: translateY(1px);transform: translateX(2px); }
+  100% { transform: translateY(-5px); }
+}
+
+@keyframes up {
+	20% { transform: translateY(1px); }
+  25% { transform: translateY(0px); }
+  40% { transform: translateY(-2px); }
+  60% { transform: translateY(0px); }
+
+  80% { transform: translateY(1px);transform: translateX(2px); }
+  100% { transform: translateY(-5px); }
+
+}
+
+
+
+
 
 /* Chrome, Safari, Opera */ 
 @-webkit-keyframes mymove {
