--- a/knox/style.day.css
+++ b/knox/style.day.css
@@ -8,12 +8,17 @@ body {
 
 }
 
-#info {
+#menu {
 	position: fixed;
 	bottom: 20px;
 	left: 20px;
 }
 
+#info {
+	position:fixed;
+	left:20%;
+	top: 100px;
+}
 h3 {
 	font-family: 'Source Code Pro', san-serif;
 }
@@ -41,7 +46,7 @@ h3:hover {
 }
 
 #sun:hover {
-cursor: url('lasso.ico'), default;
+cursor: move;
 }
 
 
